# the_likes

./: .gitignore  Basic data.xlsx  Makefile  README.md  celerybeat-schedule.dir  docker-compose.dev.yml  docs.json  docs.yaml  documentation.json  documentation.yaml  prepare.py  pyproject.toml
alembic/: env.py  script.py.mako
backend/: .dockerignore  Basic data.xlsx  Dockerfile  README.md  alembic.ini  celerybeat-schedule.dir  documentation.json  prepare.py  pyproject.toml  startup.sh  supervisord.conf  void
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260108_172830_initial.py  20260124_231900_initial.py  20260210_173939_initial.py  20260303_204609_add_refreshtoken.py  20260304_125836_remove_unique_refreshtoken_user_id.py  8e480e3a09e7_initial.py
backend/src/: containers.py  context.py  dependencies.py  lifespan.py  logger.py  main.py  middleware.py  redis_client.py  sessions.py  tasks.py
backend/src/config/: __init__.py  config.py  constants.py  enums.py
backend/src/crud/: __init__.py  _prepare_db.py  contacts.py  core.py  definitions.py  messages.py  personal_values.py  profile.py  profile_and_user.py  sql.py  user.py
backend/src/db/: __init__.py  base.py  contact_n_message.py  core.py  personal_values.py  profile_and_user.py  translations.py  user_and_profile.py
backend/src/endpoints/: __init__.py  auth.py  bootstrap.py  chat.py  contacts.py  core.py  messages.py  personal_values.py  profile.py  profiles.py  updates.py
backend/src/exceptions/: __init__.py  descriptions.py  exceptions.py  handlers.py
backend/src/models/: __init__.py  bootstrap.py  contact_n_message.py  core.py  personal_values.py  profile_and_user.py  update.py  user_and_profile.py
backend/src/schemas/: __init__.py  auth.py  bootstrap.py  chat.py  contact_n_message.py  core.py  descriptions.py  personal_values.py  user_and_profile.py
backend/src/services/: __init__.py  _prepare_db.py  _utils.py  bootstrap.py  chat.py  contact.py  core.py  message.py  personal_values.py  profile.py  update.py  user.py  user_manager.py  values.py
backend/src/services/utils/: __init__.py  other.py  user.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_personal_values.py
backend/tests/unit/: test_utils.py
frontend/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json
nginx/: Dockerfile.dev  nginx.conf  nginx.conf.dev  nginx.conf.test
src/: config.py  constants.py  context.py  db.py  dependencies.py  (+6 more)
(+154 files in other folders)
